--- a/M_Mouse/blog.html
+++ b/M_Mouse/blog.html
@@ -218,7 +218,7 @@
     
                 </div>
                 <div class="container clearfix">
-                    <div class="news_item fadeInLeftBig wow" data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -245,7 +245,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -272,7 +272,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -299,7 +299,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -326,7 +326,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -353,7 +353,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -380,7 +380,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -407,7 +407,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -434,7 +434,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -461,7 +461,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -488,7 +488,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -515,7 +515,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="news_item fadeInLeftBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
+                    <div class="news_item fadeInRightBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
                         <div class="date">
                             <ul>
                                 <li>03</li>
@@ -564,7 +564,7 @@
                 <ul>
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="about_us.html">Наш садик</a></li>
-                    <li><a href="team.html">Колектив</a></li>
+                    <li><a href="team.html">Коллектив</a></li>
                     <li><a href="blog.html">Блог</a></li>
                     <li><a href="gallery.html">Галерея</a></li>
                     <li><a href="contact.html">Контакты</a></li>
