--- a/M_Mouse/contact.html
+++ b/M_Mouse/contact.html
@@ -272,7 +272,7 @@
                 <ul>
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="about_us.html">Наш садик</a></li>
-                    <li><a href="team.html">Колектив</a></li>
+                    <li><a href="team.html">Коллектив</a></li>
                     <li><a href="blog.html">Блог</a></li>
                     <li><a href="gallery.html">Галерея</a></li>
                     <li><a href="contact.html">Контакты</a></li>
