--- a/M_Mouse/index.html
+++ b/M_Mouse/index.html
@@ -262,7 +262,7 @@
     <div class="news_block">
         <h2 class="main_header">новости</h2>
         <div class="container clearfix">
-            <div class="news_item fadeInLeftBig wow" data-wow-duration="1s">
+            <div class="news_item fadeInRightBig wow" data-wow-duration="1s">
                 <div class="date">
                     <ul>
                         <li>03</li>
@@ -289,7 +289,7 @@
                     </div>
                 </section>
             </div>
-            <div class="news_item fadeInLeftBig wow" data-wow-delay="1s"  data-wow-duration="1s">
+            <div class="news_item fadeInRightBig wow" data-wow-delay="1s"  data-wow-duration="1s">
                 <div class="date">
                     <ul>
                         <li>03</li>
@@ -316,7 +316,7 @@
                     </div>
                 </section>
             </div>
-            <div class="news_item fadeInLeftBig wow" data-wow-delay="2s"  data-wow-duration="1s">
+            <div class="news_item fadeInRightBig wow" data-wow-delay="2s"  data-wow-duration="1s">
                 <div class="date">
                     <ul>
                         <li>03</li>
@@ -358,7 +358,7 @@
                 <ul>
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="about_us.html">Наш садик</a></li>
-                    <li><a href="team.html">Колектив</a></li>
+                    <li><a href="team.html">Коллектив</a></li>
                     <li><a href="blog.html">Блог</a></li>
                     <li><a href="gallery.html">Галерея</a></li>
                     <li><a href="contact.html">Контакты</a></li>
