--- a/M_Mouse/menu.html
+++ b/M_Mouse/menu.html
@@ -242,7 +242,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -277,7 +277,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -312,7 +312,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -347,7 +347,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -382,7 +382,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -417,7 +417,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -454,7 +454,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -489,7 +489,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -524,7 +524,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -559,7 +559,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -594,7 +594,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -629,7 +629,7 @@
                             </ul>
                         </div>
                         <div class="menu_item_row">
-                            <h4>11:00 Полудник</h4>
+                            <h4>11:00 Полдник</h4>
                             <ul>
                                 <li>Блюдо 1</li>
                                 <li>Блюдо 1</li>
@@ -662,7 +662,7 @@
                 <ul>
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="about_us.html">Наш садик</a></li>
-                    <li><a href="team.html">Колектив</a></li>
+                    <li><a href="team.html">Коллектив</a></li>
                     <li><a href="blog.html">Блог</a></li>
                     <li><a href="gallery.html">Галерея</a></li>
                     <li><a href="contact.html">Контакты</a></li>
