--- a/Legsemporium/my_account.html
+++ b/Legsemporium/my_account.html
@@ -1118,22 +1118,22 @@
         <div class="footer_right">
             <div class="e_money clearfix">
                 <div class="item">
-                    <img src="images/icons-assets/visa_2.png" alt="" />
+                    <img src="images/icons-assets/visa.svg" alt="" />
                 </div>
                 <div class="item">
-                    <img src="images/icons-assets/master.png" alt="" />
+                    <img src="images/icons-assets/master_card.svg" alt="" />
                 </div>
                 <div class="item">
-                    <img src="images/icons-assets/paypal.png" alt="" />
+                    <img src="images/icons-assets/paypal.svg" alt="" />
                 </div>
                 <div class="item">
-                    <img src="images/icons-assets/aex.png" alt="" />
+                    <img src="images/icons-assets/american_express.svg" alt="" />
                 </div>
                 <div class="item">
-                    <img src="images/icons-assets/visa.png" alt="" />
+                    <img src="images/icons-assets/visa_electron.svg" alt="" />
                 </div>
                 <div class="item">
-                    <img src="images/icons-assets/maestro.png" alt="" />
+                    <img src="images/icons-assets/maestro.svg" alt="" />
                 </div>
             </div>
         </div>
