--- a/M_Mouse/index.html
+++ b/M_Mouse/index.html
@@ -249,7 +249,7 @@
                 </p>
                 <section class="content">
                     <div class="box bg-1">
-                        <a href="blog.html">
+                        <a href="team.html">
                             <button class="button button--moema button--text-thick button--text-upper button--size-s">подробнее</button>
                         </a>
                     </div>
@@ -262,7 +262,7 @@
     <div class="news_block">
         <h2 class="main_header">новости</h2>
         <div class="container clearfix">
-            <div class="news_item fadeInRightBig wow" data-wow-duration="1s">
+            <div class="news_item fadeInRightBig wow" data-wow-duration="0.5s">
                 <div class="date">
                     <ul>
                         <li>03</li>
@@ -289,7 +289,7 @@
                     </div>
                 </section>
             </div>
-            <div class="news_item fadeInRightBig wow" data-wow-delay="1s"  data-wow-duration="1s">
+            <div class="news_item fadeInRightBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
                 <div class="date">
                     <ul>
                         <li>03</li>
@@ -316,7 +316,7 @@
                     </div>
                 </section>
             </div>
-            <div class="news_item fadeInRightBig wow" data-wow-delay="2s"  data-wow-duration="1s">
+            <div class="news_item fadeInRightBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
                 <div class="date">
                     <ul>
                         <li>03</li>
