--- a/M_Mouse/blog.html
+++ b/M_Mouse/blog.html
@@ -563,7 +563,25 @@
                 <h4>меню</h4>
                 <ul>
                     <li><a href="index.html">Главная</a></li>
-                    <li><a href="about_us.html">Наш садик</a></li>
+                    <li>Наш садик
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="menu.html">
+                                    Меню
+                                </a>
+                            </li>
+                            <li>
+                                <a href="menu.html">
+                                    Расписание
+                                </a>
+                            </li>
+                            <li>
+                                <a href="menu.html">
+                                    Праздники
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                     <li><a href="team.html">Коллектив</a></li>
                     <li><a href="blog.html">Блог</a></li>
                     <li><a href="gallery.html">Галерея</a></li>
