--- a/M_Mouse/index.html
+++ b/M_Mouse/index.html
@@ -249,7 +249,7 @@
                 </p>
                 <section class="content">
                     <div class="box bg-1">
-                        <a href="team.html">
+                        <a href="blog.html">
                             <button class="button button--moema button--text-thick button--text-upper button--size-s">подробнее</button>
                         </a>
                     </div>
@@ -262,7 +262,7 @@
     <div class="news_block">
         <h2 class="main_header">новости</h2>
         <div class="container clearfix">
-            <div class="news_item fadeInRightBig wow" data-wow-duration="0.5s">
+            <div class="news_item fadeInRightBig wow" data-wow-duration="1s">
                 <div class="date">
                     <ul>
                         <li>03</li>
@@ -289,7 +289,7 @@
                     </div>
                 </section>
             </div>
-            <div class="news_item fadeInRightBig wow" data-wow-delay="0.5s"  data-wow-duration="0.5s">
+            <div class="news_item fadeInRightBig wow" data-wow-delay="1s"  data-wow-duration="1s">
                 <div class="date">
                     <ul>
                         <li>03</li>
@@ -316,7 +316,7 @@
                     </div>
                 </section>
             </div>
-            <div class="news_item fadeInRightBig wow" data-wow-delay="1s"  data-wow-duration="0.5s">
+            <div class="news_item fadeInRightBig wow" data-wow-delay="2s"  data-wow-duration="1s">
                 <div class="date">
                     <ul>
                         <li>03</li>
@@ -357,7 +357,25 @@
                 <h4>меню</h4>
                 <ul>
                     <li><a href="index.html">Главная</a></li>
-                    <li><a href="about_us.html">Наш садик</a></li>
+                    <li>Наш садик
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="menu.html">
+                                    Меню
+                                </a>
+                            </li>
+                            <li>
+                                <a href="menu.html">
+                                    Расписание
+                                </a>
+                            </li>
+                            <li>
+                                <a href="menu.html">
+                                    Праздники
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                     <li><a href="team.html">Коллектив</a></li>
                     <li><a href="blog.html">Блог</a></li>
                     <li><a href="gallery.html">Галерея</a></li>
