--- a/M_Mouse/gallery.html
+++ b/M_Mouse/gallery.html
@@ -129,8 +129,8 @@
                     <ul class="sub-menu">
                         <li>
                             <a href="menu.html">
-                                <span>Меню</span>
-                                <img src="images/menu.png" alt="">
+                                <span>Праздники</span>
+                                <img src="images/holiday.png" alt="">
                             </a>
                         </li>
                         <li>
@@ -141,8 +141,8 @@
                         </li>
                         <li>
                             <a href="menu.html">
-                                <span>Праздники</span>
-                                <img src="images/holiday.png" alt="">
+                                <span>Меню</span>
+                                <img src="images/menu.png" alt="">
                             </a>
                         </li>
                     </ul>
@@ -163,7 +163,7 @@
                             <ul class="sub-menu">
                                 <li>
                                     <a href="menu.html">
-                                        Меню
+                                        Праздники
                                     </a>
                                 </li>
                                 <li>
@@ -171,9 +171,10 @@
                                         Расписание
                                     </a>
                                 </li>
+    
                                 <li>
                                     <a href="menu.html">
-                                        Праздники
+                                        Меню
                                     </a>
                                 </li>
                             </ul>
@@ -363,7 +364,7 @@
                         <ul class="sub-menu">
                             <li>
                                 <a href="menu.html">
-                                    Меню
+                                    Праздники
                                 </a>
                             </li>
                             <li>
@@ -371,9 +372,10 @@
                                     Расписание
                                 </a>
                             </li>
+    
                             <li>
                                 <a href="menu.html">
-                                    Праздники
+                                    Меню
                                 </a>
                             </li>
                         </ul>
@@ -390,7 +392,7 @@
                     <li>0526254533<br>
                         088678887</li>
                     <li>Хуша Ханави, 1<br>
-                        Район Юд Ашдод</li>
+                        Район Йуд Ашдод</li>
                 </ul>
             </div>
             <div class="footer_item">
