--- a/RegentHill_eddits/about_us.html
+++ b/RegentHill_eddits/about_us.html
@@ -197,21 +197,21 @@
     </div>
 </div>
 
-<div class="guests">
-    <div class="container">
-        <div class="header-for-all">
-            <img src="images/svg/venzel_gold.svg" alt="">
-            <h2>
-                наши гости и партнеры
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-        </div>
-    </div>
-</div>
+<!--<div class="guests">-->
+    <!--<div class="container">-->
+        <!--<div class="header-for-all">-->
+            <!--<img src="images/svg/venzel_gold.svg" alt="">-->
+            <!--<h2>-->
+                <!--наши гости и партнеры-->
+            <!--</h2>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt-->
+                <!--ut labore et dolore magna aliqua. Ut enim ad minim veniam,-->
+                <!--quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.-->
+            <!--</p>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 <div class="guests_carousel_block">
     <!--<div class="header_vacancies_wrapper guests_adaptive">-->
