--- a/RegentHill_eddits/gallery.html
+++ b/RegentHill_eddits/gallery.html
@@ -136,18 +136,18 @@
                     </div>
                 </div>
             </a>
-            <a href="gallery_interior.html">
-                <div class="item">
-                    <div class="image_container">
-                        <div class="mask"></div>
-                        <img src="images/gallery_4.png" alt="">
-                    </div>
-                    <div class="icon_container">
-                        <img src="images/svg/gallery/screen.svg" alt="">
-                        <h2>3d тур</h2>
-                    </div>
-                </div>
-            </a>
+            <!--<a href="gallery_interior.html">-->
+                <!--<div class="item">-->
+                    <!--<div class="image_container">-->
+                        <!--<div class="mask"></div>-->
+                        <!--<img src="images/gallery_4.png" alt="">-->
+                    <!--</div>-->
+                    <!--<div class="icon_container">-->
+                        <!--<img src="images/svg/gallery/screen.svg" alt="">-->
+                        <!--<h2>3d тур</h2>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</a>-->
         </div>
     </div>
 
