--- a/RegentHill_eddits/contacts.html
+++ b/RegentHill_eddits/contacts.html
@@ -57,8 +57,11 @@
             <li>
                 <a href="gallery.html">галерея</a>
             </li>
+            <!--<li>-->
+                <!--<a href="apartment.html">апартаменты</a>-->
+            <!--</li>-->
             <li>
-                <a href="apartment.html">апартаменты</a>
+                <a href="vacancies.html">вакансии</a>
             </li>
             <li>
                 <a href="contacts.html">контакты</a>
@@ -156,60 +159,60 @@
     </div>
 </div>
 
-<div class="vacancies">
-    <div class="header_vacancies_wrapper">
-        <div class="header_vacancies">
-            <h2>Вакансии</h2>
-        </div>
-    </div>
-    <div class="container clearfix">
-        <div class="clearfix"></div>
-        <div class="vacancies_item">
-            <h3>Офис Менеджер</h3>
-            <h4>Требования</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <h4>Обязанности</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-        </div>
-        <div class="vacancies_item">
-            <h3>повар</h3>
-            <h4>Требования</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <h4>Обязанности</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-        </div>
-        <div class="vacancies_item">
-            <h3>аниматор</h3>
-            <h4>Требования</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <h4>Обязанности</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-        </div>
-        <div class="clearfix"></div>
-        <div class="mail_link">
-            Резюме отправляйте на почту:
-            <a href="mailto:name@email.com">rezume@mail.com</a>
-        </div>
-    </div>
-</div>
+<!--<div class="vacancies">-->
+    <!--<div class="header_vacancies_wrapper">-->
+        <!--<div class="header_vacancies">-->
+            <!--<h2>Вакансии</h2>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="container clearfix">-->
+        <!--<div class="clearfix"></div>-->
+        <!--<div class="vacancies_item">-->
+            <!--<h3>Офис Менеджер</h3>-->
+            <!--<h4>Требования</h4>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit,-->
+                <!--sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+            <!--</p>-->
+            <!--<h4>Обязанности</h4>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit,-->
+                <!--sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+            <!--</p>-->
+        <!--</div>-->
+        <!--<div class="vacancies_item">-->
+            <!--<h3>повар</h3>-->
+            <!--<h4>Требования</h4>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit,-->
+                <!--sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+            <!--</p>-->
+            <!--<h4>Обязанности</h4>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit,-->
+                <!--sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+            <!--</p>-->
+        <!--</div>-->
+        <!--<div class="vacancies_item">-->
+            <!--<h3>аниматор</h3>-->
+            <!--<h4>Требования</h4>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit,-->
+                <!--sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+            <!--</p>-->
+            <!--<h4>Обязанности</h4>-->
+            <!--<p>-->
+                <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit,-->
+                <!--sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+            <!--</p>-->
+        <!--</div>-->
+        <!--<div class="clearfix"></div>-->
+        <!--<div class="mail_link">-->
+            <!--Резюме отправляйте на почту:-->
+            <!--<a href="mailto:name@email.com">rezume@mail.com</a>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
     <aside>
         <div class="wrapper">
@@ -255,8 +258,11 @@
                     <li>
                         <a href="gallery.html">галерея</a>
                     </li>
+                    <!--<li>-->
+                        <!--<a href="apartment.html">апартаменты</a>-->
+                    <!--</li>-->
                     <li>
-                        <a href="apartment.html">апартаменты</a>
+                        <a href="vacancies.html">вакансии</a>
                     </li>
                     <li>
                         <a href="contacts.html">контакты</a>
