--- a/RegentHill_eddits/about_us.html
+++ b/RegentHill_eddits/about_us.html
@@ -57,8 +57,11 @@
             <li>
                 <a href="gallery.html">галерея</a>
             </li>
+            <!--<li>-->
+                <!--<a href="apartment.html">апартаменты</a>-->
+            <!--</li>-->
             <li>
-                <a href="apartment.html">апартаменты</a>
+                <a href="vacancies.html">вакансии</a>
             </li>
             <li>
                 <a href="contacts.html">контакты</a>
@@ -543,8 +546,11 @@
                     <li>
                         <a href="gallery.html">галерея</a>
                     </li>
+                    <!--<li>-->
+                        <!--<a href="apartment.html">апартаменты</a>-->
+                    <!--</li>-->
                     <li>
-                        <a href="apartment.html">апартаменты</a>
+                        <a href="vacancies.html">вакансии</a>
                     </li>
                     <li>
                         <a href="contacts.html">контакты</a>
