--- a/RegentHill_eddits/index.html
+++ b/RegentHill_eddits/index.html
@@ -57,8 +57,11 @@
                 <li>
                     <a href="gallery.html">галерея</a>
                 </li>
+                <!--<li>-->
+                    <!--<a href="apartment.html">апартаменты</a>-->
+                <!--</li>-->
                 <li>
-                    <a href="apartment.html">апартаменты</a>
+                    <a href="vacancies.html">вакансии</a>
                 </li>
                 <li>
                     <a href="contacts.html">контакты</a>
@@ -117,8 +120,11 @@
                     <li>
                         <a href="gallery.html">галерея</a>
                     </li>
+                    <!--<li>-->
+                        <!--<a href="apartment.html">апартаменты</a>-->
+                    <!--</li>-->
                     <li>
-                        <a href="apartment.html">апартаменты</a>
+                        <a href="vacancies.html">вакансии</a>
                     </li>
                     <li>
                         <a href="contacts.html">контакты</a>
@@ -141,7 +147,7 @@
     <div class="slider_block">
         <div class="slider_description">
             <img src="images/logo_big.svg" alt="">
-            <h1>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore quis </h1>
+            <h1><a href="event.html">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore quis</a></h1>
         </div>
         <div class="animated_scroll">
             <!--<span>прокрутите вниз</span>-->
@@ -323,91 +329,91 @@
         <!--</div>-->
     <!--</div>-->
 
-    <div class="container">
-        <div class="apartment_block clearfix">
-            <div class="header-for-all">
-                <img src="images/svg/venzel_gold.svg" alt="">
-                <h2>
-                    апартаменты
-                </h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Assumenda aut consequatur dolor ea eos, esse eum eveniet excepturi
-                    nisi perspiciatis veniam.
-                </p>
-            </div>
-            <div class="apartment_row">
-                <a href="apartment.html"><div class="apartment_item">
-                    <img src="images/apartment_1.png" alt="">
-                    <div class="apartment_hover">
-                        <h3>название апартаментов</h3>
-                        <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            </p>
-                    </div>
-                </div></a>
-                <a href="apartment.html"><div class="apartment_item">
-                    <img src="images/apartment_2.png" alt="">
-                    <div class="apartment_hover">
-                        <h3>название апартаментов</h3>
-                        <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                           </p>
-                    </div>
-                </div></a>
-                <a href="apartment.html"><div class="apartment_item">
-                    <img src="images/apartment_3.png" alt="">
-                    <div class="apartment_hover">
-                        <h3>название апартаментов</h3>
-                        <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            </p>
-                    </div>
-                </div></a>
-            </div>
-            <div class="apartment_row">
-                <a href="apartment.html"><div class="apartment_item">
-                    <img src="images/apartment_4.png" alt="">
-                    <div class="apartment_hover">
-                        <h3>название апартаментов</h3>
-                        <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim </p>
-                    </div>
-                </div></a>
-                <a href="apartment.html"><div class="apartment_item">
-                    <img src="images/apartment_5.png" alt="">
-                    <div class="apartment_hover">
-                        <h3>название апартаментов</h3>
-                        <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim </p>
-                    </div>
-                </div></a>
-            </div>
-            <div class="apartment_row">
-                <a href="apartment.html"><div class="apartment_item">
-                    <img src="images/apartment_1.png" alt="">
-                    <div class="apartment_hover">
-                        <h3>название апартаментов</h3>
-                        <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                           </p>
-                    </div>
-                </div></a>
-                <a href="apartment.html"><div class="apartment_item">
-                    <img src="images/apartment_2.png" alt="">
-                    <div class="apartment_hover">
-                        <h3>название апартаментов</h3>
-                        <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            </p>
-                    </div>
-                </div></a>
-                <a href="apartment.html"><div class="apartment_item">
-                    <img src="images/apartment_3.png" alt="">
-                    <div class="apartment_hover">
-                        <h3>название апартаментов</h3>
-                        <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            </p>
-                    </div>
-                </div></a>
-            </div>
-        </div>
-    </div>
+    <!--<div class="container">-->
+        <!--<div class="apartment_block clearfix">-->
+            <!--<div class="header-for-all">-->
+                <!--<img src="images/svg/venzel_gold.svg" alt="">-->
+                <!--<h2>-->
+                    <!--апартаменты-->
+                <!--</h2>-->
+                <!--<p>-->
+                    <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+                    <!--Assumenda aut consequatur dolor ea eos, esse eum eveniet excepturi-->
+                    <!--nisi perspiciatis veniam.-->
+                <!--</p>-->
+            <!--</div>-->
+            <!--<div class="apartment_row">-->
+                <!--<a href="apartment.html"><div class="apartment_item">-->
+                    <!--<img src="images/apartment_1.png" alt="">-->
+                    <!--<div class="apartment_hover">-->
+                        <!--<h3>название апартаментов</h3>-->
+                        <!--<p>consectetur adipisicing elit, sed do eiusmod tempor incididunt-->
+                            <!--</p>-->
+                    <!--</div>-->
+                <!--</div></a>-->
+                <!--<a href="apartment.html"><div class="apartment_item">-->
+                    <!--<img src="images/apartment_2.png" alt="">-->
+                    <!--<div class="apartment_hover">-->
+                        <!--<h3>название апартаментов</h3>-->
+                        <!--<p>consectetur adipisicing elit, sed do eiusmod tempor incididunt-->
+                           <!--</p>-->
+                    <!--</div>-->
+                <!--</div></a>-->
+                <!--<a href="apartment.html"><div class="apartment_item">-->
+                    <!--<img src="images/apartment_3.png" alt="">-->
+                    <!--<div class="apartment_hover">-->
+                        <!--<h3>название апартаментов</h3>-->
+                        <!--<p>consectetur adipisicing elit, sed do eiusmod tempor incididunt-->
+                            <!--</p>-->
+                    <!--</div>-->
+                <!--</div></a>-->
+            <!--</div>-->
+            <!--<div class="apartment_row">-->
+                <!--<a href="apartment.html"><div class="apartment_item">-->
+                    <!--<img src="images/apartment_4.png" alt="">-->
+                    <!--<div class="apartment_hover">-->
+                        <!--<h3>название апартаментов</h3>-->
+                        <!--<p>consectetur adipisicing elit, sed do eiusmod tempor incididunt-->
+                            <!--ut labore et dolore magna aliqua. Ut enim ad minim </p>-->
+                    <!--</div>-->
+                <!--</div></a>-->
+                <!--<a href="apartment.html"><div class="apartment_item">-->
+                    <!--<img src="images/apartment_5.png" alt="">-->
+                    <!--<div class="apartment_hover">-->
+                        <!--<h3>название апартаментов</h3>-->
+                        <!--<p>consectetur adipisicing elit, sed do eiusmod tempor incididunt-->
+                            <!--ut labore et dolore magna aliqua. Ut enim ad minim </p>-->
+                    <!--</div>-->
+                <!--</div></a>-->
+            <!--</div>-->
+            <!--<div class="apartment_row">-->
+                <!--<a href="apartment.html"><div class="apartment_item">-->
+                    <!--<img src="images/apartment_1.png" alt="">-->
+                    <!--<div class="apartment_hover">-->
+                        <!--<h3>название апартаментов</h3>-->
+                        <!--<p>consectetur adipisicing elit, sed do eiusmod tempor incididunt-->
+                           <!--</p>-->
+                    <!--</div>-->
+                <!--</div></a>-->
+                <!--<a href="apartment.html"><div class="apartment_item">-->
+                    <!--<img src="images/apartment_2.png" alt="">-->
+                    <!--<div class="apartment_hover">-->
+                        <!--<h3>название апартаментов</h3>-->
+                        <!--<p>consectetur adipisicing elit, sed do eiusmod tempor incididunt-->
+                            <!--</p>-->
+                    <!--</div>-->
+                <!--</div></a>-->
+                <!--<a href="apartment.html"><div class="apartment_item">-->
+                    <!--<img src="images/apartment_3.png" alt="">-->
+                    <!--<div class="apartment_hover">-->
+                        <!--<h3>название апартаментов</h3>-->
+                        <!--<p>consectetur adipisicing elit, sed do eiusmod tempor incididunt-->
+                            <!--</p>-->
+                    <!--</div>-->
+                <!--</div></a>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div class="container">
         <!--<div class="news_block clearfix">-->
