--- a/RegentHill_eddits/vacancies.html
+++ b/RegentHill_eddits/vacancies.html
@@ -12,79 +12,82 @@
     <link href="css/animate.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
-<body class="index inner_page">
+    <body class="index inner_page">
 
-<div class="mobile_wrapper">
-    <div class="mobile_menu clearfix">
-        <div class="left">
-            <div class="logo_mob">
-                <a href="index.html">
-                    <img src="images/logo_nav_small.svg" alt="">
-                </a>
+    <div class="mobile_wrapper">
+        <div class="mobile_menu clearfix">
+            <div class="left">
+                <div class="logo_mob">
+                    <a href="index.html">
+                        <img src="images/logo_nav_small.svg" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="right">
+                <div class="bar">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </div>
+                <div class="phone_container">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                    <h3>Заказать<br>Мероприятие</h3>
+                </div>
+                <div class="languages clearfix">
+                    <ul class="lang clearfix">
+                        <li class="lang-item current-lang"><a href="">РУС</a></li>
+                        <li class="lang-item"><a href="">ENG</a></li>
+                        <!--<li class="lang-item"><a href="">УКР</a></li>-->
+                    </ul>
+                </div>
             </div>
         </div>
-        <div class="right">
-            <div class="bar">
-                <i class="fa fa-bars" aria-hidden="true"></i>
-            </div>
-            <div class="phone_container">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <h3>Заказать<br>Мероприятие</h3>
-            </div>
-            <div class="languages clearfix">
-                <ul class="lang clearfix">
-                    <li class="lang-item current-lang"><a href="">РУС</a></li>
-                    <li class="lang-item"><a href="">ENG</a></li>
-                    <!--<li class="lang-item"><a href="">УКР</a></li>-->
-                </ul>
-            </div>
+        <div class="mobile_footer">
+            <ul>
+                <li>
+                    <a href="index.html">главная</a>
+                </li>
+                <li>
+                    <a href="about_us.html">о нас</a>
+                </li>
+                <li>
+                    <a href="menu.html">меню</a>
+                </li>
+                <li>
+                    <a href="">наши услуги</a>
+                </li>
+                <li>
+                    <a href="gallery.html">галерея</a>
+                </li>
+                <!--<li>-->
+                    <!--<a href="apartment.html">апартаменты</a>-->
+                <!--</li>-->
+                <li>
+                    <a href="vacancies.html">вакансии</a>
+                </li>
+                <li>
+                    <a href="contacts.html">контакты</a>
+                </li>
+            </ul>
+            <ul class="sub_mobile_menu">
+                <li><a href="event.html">Мероприятия</a></li>
+                <!--<li><a href="">Кейтеринг</a></li>-->
+                <li><a href="service.html">Техническое оснащение</a></li>
+                <li><a href="service.html">Дополнительные услуги</a></li>
+            </ul>
         </div>
     </div>
-    <div class="mobile_footer">
-        <ul>
-            <li>
-                <a href="index.html">главная</a>
-            </li>
-            <li>
-                <a href="about_us.html">о нас</a>
-            </li>
-            <li>
-                <a href="menu.html">меню</a>
-            </li>
-            <li>
-                <a href="">наши услуги</a>
-            </li>
-            <li>
-                <a href="gallery.html">галерея</a>
-            </li>
-            <!--<li>-->
-                <!--<a href="apartment.html">апартаменты</a>-->
-            <!--</li>-->
-            <li>
-                <a href="vacancies.html">вакансии</a>
-            </li>
-            <li>
-                <a href="contacts.html">контакты</a>
-            </li>
-        </ul>
-        <ul class="sub_mobile_menu">
-            <li><a href="event.html">Мероприятия</a></li>
-            <!--<li><a href="">Кейтеринг</a></li>-->
-            <li><a href="service.html">Техническое оснащение</a></li>
-            <li><a href="service.html">Дополнительные услуги</a></li>
-        </ul>
-    </div>
-</div>
 
-    <div class="news-header_block clearfix">
+    <div class="service-header_block clearfix">
         <div class="mask"></div>
         <!--<img src="images/menu_header.jpg" alt="">-->
         <div class="header-for-all">
             <img src="images/svg/venzel.svg" alt="">
             <h1>
-                новости
+                вакансии
             </h1>
             <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Magnam quae, quidem. Dolorum et excepturi incidunt magni unde! Ab fugiat illum,
+                inventore maxime nihil omnis quam repudiandae vel? Atque natus, odio.
             </p>
         </div>
     </div>
@@ -93,123 +96,86 @@
         <div class="bread_crumbs_block">
             <ul>
                 <li><a href="index.html">На главную</a></li>
-                <li><a href="news.html">Новости</a></li>
+                <li><a href="vacancies.html">Вакансии</a></li>
             </ul>
         </div>
     </div>
 
-    <div class="container">
-        <div class="all_news_block clearfix">
-            <div class="header-for-all">
-                <img src="images/vintage_element.svg" alt="">
-                <h2>
-                    новости
-                </h2>
-                <p>
+    <div class="vacancies">
+    <div class="header_vacancies_wrapper">
+    <div class="header_vacancies">
+    <h2>Вакансии</h2>
+    </div>
+    </div>
+    <div class="container clearfix">
+    <div class="clearfix"></div>
+    <div class="vacancies_item">
+    <h3>Офис Менеджер</h3>
+    <h4>Требования</h4>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    <h4>Обязанности</h4>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    </div>
+    <div class="vacancies_item">
+    <h3>повар</h3>
+    <h4>Требования</h4>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    <h4>Обязанности</h4>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    </div>
+    <div class="vacancies_item">
+    <h3>аниматор</h3>
+    <h4>Требования</h4>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    <h4>Обязанности</h4>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    </div>
+    <div class="clearfix"></div>
+    <div class="mail_link">
+    Резюме отправляйте на почту:
+    <a href="mailto:name@email.com">rezume@mail.com</a>
+    </div>
+    </div>
+    </div>
 
-                </p>
+    <div class="service_for_one_block">
+        <h2>Скачать анкету</h2>
+        <div class="gold_line"></div>
+        <div class="container clearfix">
+            <div class="one_item">
+                <a href="">
+                    <div class="image_container">
+                        <div class="mask"></div>
+                        <img src="images/service_icon_1.jpg" alt="">
+                    </div>
+                    <div class="description_icon">
+                        <div class="price">
+                            PDF
+                        </div>
+                        <div class="download_icon">
+                            <i class="fa fa-download" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="news_item">
-                <div class="date"><span>03</span><span>марта</span><span>2016</span></div>
-                <div class="img_container">
-                    <img src="images/news_1.png" alt="">
-                </div>
-                <div class="text">
-                    <h3>название новости</h3>
-                    <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                    <a href="news.html">читать далее</a>
-                </div>
-            </div>
-            <div class="news_item">
-                <div class="date"><span>03</span><span>марта</span><span>2016</span></div>
-                <div class="img_container">
-                    <img src="images/news_2.png" alt="">
-                </div>
-                <div class="text">
-                    <h3>название новости</h3>
-                    <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                    <a href="news.html">читать далее</a>
-                </div>
-            </div>
-            <div class="news_item">
-                <div class="date"><span>03</span><span>марта</span><span>2016</span></div>
-                <div class="img_container">
-                    <img src="images/news_1.png" alt="">
-                </div>
-                <div class="text">
-                    <h3>название новости</h3>
-                    <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                    <a href="news.html">читать далее</a>
-                </div>
-            </div>
-            <div class="news_item">
-                <div class="date"><span>03</span><span>марта</span><span>2016</span></div>
-                <div class="img_container">
-                    <img src="images/news_1.png" alt="">
-                </div>
-                <div class="text">
-                    <h3>название новости</h3>
-                    <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                    <a href="news.html">читать далее</a>
-                </div>
-            </div>
-            <div class="news_item">
-                <div class="date"><span>03</span><span>марта</span><span>2016</span></div>
-                <div class="img_container">
-                    <img src="images/news_2.png" alt="">
-                </div>
-                <div class="text">
-                    <h3>название новости</h3>
-                    <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                    <a href="news.html">читать далее</a>
-                </div>
-            </div>
-            <div class="news_item">
-                <div class="date"><span>03</span><span>марта</span><span>2016</span></div>
-                <div class="img_container">
-                    <img src="images/news_1.png" alt="">
-                </div>
-                <div class="text">
-                    <h3>название новости</h3>
-                    <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                    <a href="news.html">читать далее</a>
-                </div>
-            </div>
-            <div class="news_item">
-                <div class="date"><span>03</span><span>марта</span><span>2016</span></div>
-                <div class="img_container">
-                    <img src="images/news_1.png" alt="">
-                </div>
-                <div class="text">
-                    <h3>название новости</h3>
-                    <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                    <a href="news.html">читать далее</a>
-                </div>
-            </div>
-            <div class="news_item">
-                <div class="date"><span>03</span><span>марта</span><span>2016</span></div>
-                <div class="img_container">
-                    <img src="images/news_2.png" alt="">
-                </div>
-                <div class="text">
-                    <h3>название новости</h3>
-                    <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                    <a href="news.html">читать далее</a>
-                </div>
-            </div>
-            <div class="news_item">
-                <div class="date"><span>03</span><span>марта</span><span>2016</span></div>
-                <div class="img_container">
-                    <img src="images/news_1.png" alt="">
-                </div>
-                <div class="text">
-                    <h3>название новости</h3>
-                    <p>consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                    <a href="news.html">читать далее</a>
-                </div>
-            </div>
-            <div class="clearfix"></div>
-            <div class="show_more">Заргузить еще</div>
         </div>
     </div>
 
@@ -674,5 +640,6 @@
             async defer></script>
     <script src="js/script.js"></script>
 
-</body>
+    </body>
+
 </html>
